--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,11 @@
                 </div>
             </div>
         </div>
-        <p class="info">Flip should work best in Google Chrome, decent in
-            Firefox, IE10 and Opera;</p>
+        <p class="info">
+            <button class="btn btn-default text-white-50 sign-out-btn">
+                sign out
+            </button>
+        </p>
     </div>
     <div class="stat-template template">
         <div class="padded">
@@ -162,6 +165,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="lib/firebase-app.js"></script>
     <script src="lib/firebase-analytics.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-auth.js"></script>
     <script src="lib/init.js"></script>
     <script src="lib/jquery-3.4.1.min.js"></script>
     <script
