Create video_15 branch

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>Flip Game</title>
 </head>
 
-<body>
+<body data-version="15">
     <div id="g"></div>
     <div class="logo">
         <p class="info">Click the P to get started.</p>
