--- a/public/index.html
+++ b/public/index.html
@@ -167,6 +167,7 @@
     <script src="lib/firebase-app.js"></script>
     <script src="lib/firebase-analytics.js"></script> 
     <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-firestore.js"></script>
     <script src="lib/init.js"></script>
     <script src="lib/jquery-3.4.1.min.js"></script>
     <script
@@ -179,6 +180,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"
     ></script>
+    <script src="js/db.js"></script>
     <script src="js/main.js"></script>
 </body>
 
