--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,7 @@
         crossorigin="anonymous"
     ></script>
     <script src="js/db.js"></script>
+    <script src="js/log.js"></script>
     <script src="js/main.js"></script>
 </body>
 
