Create video_24 branch

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
                     id="stats"
                 >
                     <div class="padded">
-                        <h2>Figures</h2> Looks like you haven't FLIPped yet. <a
+                        <h2>Figures</h2> Looks like you haven't FLIPped yet. 
+                        <a
                             href="#"
                             class="playnow"
                         >Play now</a>
