Create video_25 branch

--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,16 @@
                     class="b contentbox"
                     id="stats"
                 >
-                    <div class="padded">
-                        <h2>Figures</h2> Looks like you haven't FLIPped yet. 
-                        <a
-                            href="#"
-                            class="playnow"
-                        >Play now</a>
+                <div class="padded">
+                    <div class="content">
+                        <h2>Figures</h2>
+                        Looks like you haven't FLIPped yet. 
                     </div>
+                    <a
+                        href="#"
+                        class="playnow"
+                    >Play now</a>
+                </div>
                 </div>
             </div>
         </div>
